Change to superfast preset, set profile to baseline.

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,12 +13,12 @@ rtmp {
             live on;
 
             exec ffmpeg -i rtmp://localhost:1935/encoder/$name
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 rtmp://localhost:1935/hls/$name_720p2564kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 1800k -f flv -g 30 -r 30 -s 960x540 rtmp://localhost:1935/hls/$name_540p1864kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 1200k -f flv -g 30 -r 30 -s 640x360 rtmp://localhost:1935/hls/$name_360p1264kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 686k -f flv -g 30 -r 30 -s 640x360 rtmp://localhost:1935/hls/$name_360p750kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 400k -f flv -g 15 -r 15 -s 480x270 rtmp://localhost:1935/hls/$name_270p464kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 200k -f flv -g 15 -r 15 -s 480x270 rtmp://localhost:1935/hls/$name_270p264kbs;
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2564kbs
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 1800k -f flv -g 30 -r 30 -s 960x540 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_540p1864kbs
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 1200k -f flv -g 30 -r 30 -s 640x360 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_360p1264kbs
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 686k -f flv -g 30 -r 30 -s 640x360 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_360p750kbs
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 400k -f flv -g 15 -r 15 -s 480x270 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_270p464kbs
+              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 200k -f flv -g 15 -r 15 -s 480x270 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_270p264kbs;
         }
 
         application hls {
