Update nginx to 1.7.5 and always send CORS header
*add_header [...] always* requires >= 1.7.5 as per https://nginx.org/en/docs/http/ngx_http_headers_module.html

--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
             }
             root /data;
             add_header Cache-Control no-cache;
-            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Origin * always;
         }
 
         location /stat {
